[Web]fix dashboard header z-index

--- a/src/app/containers/dashboard/dashboard.component.css
+++ b/src/app/containers/dashboard/dashboard.component.css
@@ -82,7 +82,8 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  width: calc(100% - 270px);  
+  width: calc(100% - 270px);
+  z-index: 10;
 }
 .minimize-main-nav .ala-dashboard-header {
   width: 100%;
